# xmonad-cfg

./: .gitignore  README.md  build  build.nix  hpack-retired.yaml  stack.yaml  xmonad-cfg.cabal  xmonad.hs
.github/workflows/: ci.yml
app/: Main.hs
lib/: Config.hs  Keys.hs  Layouts.hs  Utils.hs  WSRules.hs
nix/: build.nix  default.nix  shell.nix
