cabal-version: 1.12

name:           xmonad-cfg
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/alter2000/xmonad-cfg#readme>
homepage:       https://github.com/alter2000/xmonad-cfg#readme
bug-reports:    https://github.com/alter2000/xmonad-cfg/issues
author:         Jor Bashllari
maintainer:     altnate2000@gmail.com
copyright:      me
license:        BSD3
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/alter2000/xmonad-cfg

library
  other-modules:
  hs-source-dirs:
      lib
  build-depends:
      base >=4.7 && <5
    , xmonad
    , xmonad-contrib
    , containers
    , unix
  default-language: Haskell2010

executable xmonad
  main-is: ./xmonad.hs
  other-modules:
      Keys
      Layouts
      Utils
      WSRules
  hs-source-dirs:
      .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , xmonad
    , xmonad-cfg
    , xmonad-contrib
  default-language: Haskell2010
