cabal-version: 3.0

name:           xmonad-cfg
version:        0.1.0.0
description:    My personal XMonad config
homepage:       https://github.com/alter2000/xmonad-cfg#readme
bug-reports:    https://github.com/alter2000/xmonad-cfg/issues
author:         Jor Bashllari
maintainer:     altnate2000@gmail.com
copyright:      me
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/alter2000/xmonad-cfg

executable xmonad
  main-is: Main.hs
  other-modules:
      Keys
    , Layouts
    , Utils
    , WSRules
  hs-source-dirs: app, lib
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , async
    , containers
    -- , process
    , unix
    , xmonad
    , xmonad-contrib
    , X11
  default-language: Haskell2010
  default-extensions:
      ScopedTypeVariables
    , BlockArguments
